Bug 8888 - WDC WD3200JD-00KLB0 fails HPA
Summary: WDC WD3200JD-00KLB0 fails HPA
Status: CLOSED CODE_FIX
Alias: None
Product: IO/Storage
Classification: Unclassified
Component: Serial ATA (show other bugs)
Hardware: All Linux
: P1 high
Assignee: Tejun Heo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-08-14 09:48 UTC by Richard
Modified: 2008-09-23 03:01 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.21-1.3194.fc7
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
dmesg (15.90 KB, text/plain)
2007-08-14 09:50 UTC, Richard
Details
hdparm -I /dev/sda (1.74 KB, text/plain)
2007-08-14 09:51 UTC, Richard
Details
hdparm -I /dev/sdb (1.80 KB, text/plain)
2007-08-14 09:52 UTC, Richard
Details
lspci -nnv (3.44 KB, text/plain)
2007-08-14 09:52 UTC, Richard
Details
hpa-update.patch (11.73 KB, patch)
2007-08-15 07:49 UTC, Tejun Heo
Details | Diff
hpa-update-1.patch (11.69 KB, patch)
2007-08-15 11:17 UTC, Tejun Heo
Details | Diff
dmesg from combined.patch (788.80 KB, application/zip)
2007-08-16 20:04 UTC, Richard
Details
dmesg from combined patch - part 2 (462.90 KB, application/zip)
2007-08-16 20:05 UTC, Richard
Details
hpa-update-2.patch (12.09 KB, patch)
2007-08-17 01:50 UTC, Tejun Heo
Details | Diff
dmesg w/ noapic & irqpoll (818.35 KB, application/zip)
2007-08-19 21:54 UTC, Richard
Details

Description Richard 2007-08-14 09:48:10 UTC
Most recent kernel where this bug did not occur: 2.6.15-1.1833_FC4
Distribution: Fedora Core 4
Hardware Environment: Matsonic 8177c mobo via chipset 8237 south bridge. 2 sata devices.
Software Environment:
Problem Description: sata drive fails to set xfer mode

Steps to reproduce:
Comment 1 Richard 2007-08-14 09:50:47 UTC
Created attachment 12381 [details]
dmesg
Comment 2 Richard 2007-08-14 09:51:44 UTC
Created attachment 12382 [details]
hdparm -I /dev/sda
Comment 3 Richard 2007-08-14 09:52:03 UTC
Created attachment 12383 [details]
hdparm -I /dev/sdb
Comment 4 Richard 2007-08-14 09:52:57 UTC
Created attachment 12384 [details]
lspci -nnv
Comment 5 Tejun Heo 2007-08-15 01:45:53 UTC
Hmmm... I have a similar, though not the same, drive WD2600YS-01S and it's happy with HPA on my machine (intel and via ahci).  I wanna make sure the drives are the problem before proceeding.  Can you try to connect the drives to a different controller and see whether the problem persists?

Thanks.
Comment 6 Richard 2007-08-15 04:04:29 UTC
I tried booting with a SiL pci sata controller. Same exact error. Will post dmesg if requested.
Comment 7 Tejun Heo 2007-08-15 07:49:28 UTC
Created attachment 12392 [details]
hpa-update.patch

Please apply the attached patch on top of 2.6.23-rc3 and report the result.  Thanks.
Comment 8 Tejun Heo 2007-08-15 11:17:46 UTC
Created attachment 12394 [details]
hpa-update-1.patch

Oops, that was the wrong patch.  Please test this one.  Thanks.
Comment 9 Richard 2007-08-15 11:31:35 UTC
Will test when I return home from work. Thanks.
Comment 10 Richard 2007-08-16 00:04:25 UTC
Patch does not work, ata2 is still getting disabled. I'm not sure how I can post the dmesg log as the kernel panic exits without booting.
Comment 11 Tejun Heo 2007-08-16 04:11:00 UTC
If you don't have serial or net console set up, digital camera comes pretty handy.
Comment 12 Richard 2007-08-16 20:04:14 UTC
Created attachment 12412 [details]
dmesg from combined.patch

this will have to suffice until I get a serial console up.
Comment 13 Richard 2007-08-16 20:05:03 UTC
Created attachment 12413 [details]
dmesg from combined patch - part 2
Comment 14 Tejun Heo 2007-08-17 01:50:38 UTC
Created attachment 12416 [details]
hpa-update-2.patch

Please give a shot at this one.  Thanks.
Comment 15 Tejun Heo 2007-08-19 18:51:40 UTC
Richard wrote
> I forgot to mention.. what it does now is just an endless cycle of trying to
> set
> the xfer modes. it cycles through all modes, then gets caught in an infinate
> loop attempting to set it to udma/33.

Hmmm... That seems to be caused by a different problem.  Probably IRQ mis-delivery.  Please give a shot at 'acpi=noirq', if that doesn't work 'noapic' and lastly 'irqpoll'.

Thanks.
Comment 16 Richard 2007-08-19 21:54:36 UTC
Created attachment 12451 [details]
dmesg w/ noapic & irqpoll

it seems to get past the point where it hung before. But now it brings a different error.
Comment 17 Richard 2007-08-19 21:59:29 UTC
oh. And acpi=noirq has no change to the boot msg.
Comment 18 Tejun Heo 2007-08-21 20:14:36 UTC
Thanks.  It seems IRQ delivery on VIA is broken again but I'm not sure why it failed to boot with irqpoll.  What's your root device?  Kernel detected disks okay but failed to mount the root partition with error 6 (ENXIO).  Could it be the wrong "root=" parameter?
Comment 19 Richard 2007-08-25 08:03:05 UTC
This patched booted fine with the proper root= parameter. Sorry for the oversight, it was pointing to a different install on a different drive.

I have been up and running on 2.6.23-rc3 with your patch for a day and so far no problems.
Comment 20 Tejun Heo 2007-08-26 21:46:35 UTC
Please post boot kernel log && file a separate bug report for the IRQ routing problem.  Thanks.

Note You need to log in before you can comment on or make changes to this bug.