libata: Fix HPA horkage to target whole model series not just a few devices

Fixes: 16c55b038033 (\libata: implement BROKEN_HPA horkage and apply it to affected drives")

Link: https://bugzilla.kernel.org/show_bug.cgi?id=8888

Signed-off-by: Nick Barkas nickbgrk@gmail.com
Signed-off-by: Ioannis Barkas <jnyb.de@gmail.com>